--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=test
 
-spring.datasource.url=jdbc:mysql://springboot-database.c10i2wgsqtie.ap-northeast-2.rds.amazonaws.com:3306/test
+spring.datasource.url=jdbc:mysql://springboot-database.c10i2wgsqtie.ap-northeast-2.rds.amazonaws.com:3306/shop
 spring.datasource.username=admin
 spring.datasource.password=bakuya3861!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
